--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,6 +16,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/thermostat_spec.js"></script>
+  <script src="js/jquery.min.js"></script>
 </head>
 
 <body>
